--- a/Dream/Dream/Views/Shared/_LayoutEmpleado.cshtml
+++ b/Dream/Dream/Views/Shared/_LayoutEmpleado.cshtml
@@ -40,28 +40,28 @@
             <li class="has-subnav">
                 <span class="nav-text">
                     <img src="~/Content/img/hogar.png" width="30" />
-                    @Html.ActionLink("Home", "Index", "HomeEmpresa")
+                    @Html.ActionLink("Home", "Index", "HomeEmpleado")
                 </span>
                 <br />
             </li>
-            <li class="has-subnav">
+            @*<li class="has-subnav">
                 <span class="nav-text">
                     <img src="~/Content/img/oferta.png" width="30" />
                     @Html.ActionLink("Crear Oferta", "Create", "OfertaEmpleos")
                 </span>
                 <br />
-            </li>
+            </li>*@
             <li class="has-subnav">
                 <span class="nav-text">
                     <img src="~/Content/img/oferta1.png" width="30" />
-                    @Html.ActionLink("Ver Ofertas", "TodasLasOfertas", "OfertaEmpleos")
+                    @Html.ActionLink("Ver Ofertas", "TodasLasOfertasEmpleados", "OfertaEmpleos")
                 </span>
                 <br />
             </li>
             <li class="has-subnav">
                 <span class="nav-text">
                     <img src="~/Content/img/user.png" width="30" />
-                    @Html.ActionLink("Perfil", "Index", "Usuarios")
+                    @Html.ActionLink("Perfil", "DetailsEmpleado", "Curriculu")
                 </span>
             </li>
 
