--- a/Dream/Dream/Views/Curriculu/Edit.cshtml
+++ b/Dream/Dream/Views/Curriculu/Edit.cshtml
@@ -118,7 +118,7 @@
                                     @Html.EditorFor(model => model.segundoIdioma, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.segundoIdioma, "", new { @class = "text-danger" })
                                 </div>
-                                <div class="col-md-6">
+                                @*<div class="col-md-6">
                                     <label class="labels">Estado</label>
                                     @Html.EditorFor(model => model.estado, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.estado, "", new { @class = "text-danger" })
@@ -127,7 +127,7 @@
                                     <label class="labels">Usuario</label>
                                     @Html.DropDownList("idUsuario", null, htmlAttributes: new { @class = "form-control" })
                                     @Html.ValidationMessageFor(model => model.idUsuario, "", new { @class = "text-danger" })
-                                </div>
+                                </div>*@
                                 <div class="form-group">
                                     <div class="col-md-offset-2 col-md-10" id="btn">
                                         <input type="submit" value="Save" class="btn btn-default" />
@@ -146,7 +146,7 @@
     }
 
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Atras", "DetailsEmpleado","Curriculu")
     </div>
 </body>
 </html>
