--- a/Dream/Dream/Views/Curriculu/Edit.cshtml
+++ b/Dream/Dream/Views/Curriculu/Edit.cshtml
@@ -12,7 +12,7 @@
     <title>Edit</title>
     @Styles.Render("~/Content/Curricul.css")
 </head>
-<body>
+<body style="background: #254B5E">
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
