--- a/Dream/Dream/Content/Curricul.css
+++ b/Dream/Dream/Content/Curricul.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background: #0c023d;
+    background: #254B5E;
 }
 
 #D1 {
@@ -18,7 +18,7 @@
 }
 
     .profile-button:hover {
-        background: #0c023d
+        background: #ffffff
     }
 
     .profile-button:focus {
