--- a/Dream/Dream/Views/Curriculu/Details.cshtml
+++ b/Dream/Dream/Views/Curriculu/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Dream.Models.Curriculum>
 
 @{
-    Layout = "~/Views/Shared/_LayoutEmpleado.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
