--- a/Dream/Dream/Views/Curriculu/Index2.cshtml
+++ b/Dream/Dream/Views/Curriculu/Index2.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Dream.Models.Curriculum>
 @{
-    Layout = "~/Views/Shared/_LayoutEmpleado.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <style>
     .table-container {
