--- a/Dream/Dream/Views/DatosEmpresas/Create.cshtml
+++ b/Dream/Dream/Views/DatosEmpresas/Create.cshtml
@@ -1,7 +1,9 @@
 ﻿@model Dream.Models.DatosEmpresa
 
 @{
-    ViewBag.Title = "Create";
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    Layout = null;
 }
 
 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
