--- a/Dream/Dream/Views/OfertaEmpleos/TodasLasOfertasEmpleados.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/TodasLasOfertasEmpleados.cshtml
@@ -45,7 +45,7 @@
     <div class="row">
         @foreach (var item in Model)
         {
-            <div class="col-lg-3 col-md-4 col-sm-6" id="pricing">
+            <div class="co-lg-3 col-md-4 col-sm-6" id="pricing">
                 <div class="panel-default border border-secondary" style="backdrop-filter: blur(1rem); margin-top: 20px; border-radius: 20px; max-width: 300px;">
                     <div class="pricing-box mt-4">
                         <img src="https://cdn.milenio.com/uploads/media/2021/01/01/empleo-foto-shutterstock.jpg" height="70" class="mt-3" alt="">
