Accion de aplicar listo
NAZO

--- a/Dream/Dream/Views/DatosEmpresas/Details.cshtml
+++ b/Dream/Dream/Views/DatosEmpresas/Details.cshtml
@@ -1,7 +1,11 @@
 ﻿@model Dream.Models.DatosEmpresa
 
 @{
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/Curricul.css")
     ViewBag.Title = "Details";
+
 }
 
 <a href="https://icons8.com/icon/kDoeg22e5jUY/male-user"></a> <a href="https://icons8.com"></a>
