--- a/Dream/Dream/Views/OfertaEmpleos/Details2.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Details2.cshtml
@@ -1,5 +1,4 @@
-﻿@model Dream.Models.OfertaEmpleo
-
+﻿@model IEnumerable<Dream.Models.OfertaEmpleo>
 @{
     ViewBag.Title = "Details2";
     Layout = "~/Views/Shared/_LayoutEmpleado.cshtml";
@@ -17,85 +16,90 @@
 
 
 
+@foreach (var item in Model)
+{
+    <main class="[ main ] [ flow ]">
 
-<main class="[ main ] [ flow ]">
-
-    <ul class="cards">
-        <li class="card">
-            <div class="card__img">
-                <div class="img__cover">
-                    <img src="~/Content/img/edificio.jpg" alt="" />
+        <ul class="cards">
+            <li class="card">
+                <div class="card__img">
+                    <div class="img__cover">
+                        <img src="~/Content/img/edificio.jpg" alt="" />
+                    </div>
+                    <div class="img__profile">
+                        <img src="~/Content/img/logo.png" alt="">
+                    </div>
                 </div>
-                <div class="img__profile">
-                    <img src="~/Content/img/logo.png" alt="">
+                <div class="[ card__text ] [ flow ]">
+                    <h1>
+
+                        @Html.DisplayFor(modelItem => item.nombre)
+
+                    </h1>
+                    <h3>
+                        Numero de vacantes:
+                        @Html.DisplayFor(modelItem => item.nVacantes)
+
+
+                    </h3>
+                    <h3>
+                        Cargo:
+                        @Html.DisplayFor(modelItem => item.cargo)
+
+
+                    </h3>
+                    <h3>
+                        Descripcion:
+                        @Html.DisplayFor(modelItem => item.descripcion)
+
+
+                    </h3>
+                    <h3>
+                        Requeriminetos:
+                        @Html.DisplayFor(modelItem => item.requerimientos)
+
+
+                    </h3>
+                    <h3>
+                        Funciones:
+                        @Html.DisplayFor(modelItem => item.funciones)
+
+
+                    </h3>
+                    <h3>
+                        Salario:
+                        @Html.DisplayFor(modelItem => item.Salario)
+
+
+                    </h3>
+                    <h3>
+                        Prestaciones:
+                        @Html.DisplayFor(modelItem => item.prestaciones)
+
+
+                    </h3>
+
+                    <h3>
+                        Datos empresa:
+                        @Html.DisplayFor(modelItem => item.DatosEmpresa.nombre)
+
+
+                    </h3>
+                    <h3>
+                        Categoria:
+                        @Html.DisplayFor(modelItem => item.Categoria.nombre)
+
+
+                    </h3>
+                    @*<a href="/Aplicacion/Index">Aplicar</a>*@
+                    @Html.ActionLink("Aplicar a la oferta de empleo", "AplicarOferta", new { id = item.idOfertaEmpleo })
+
                 </div>
-            </div>
-            <div class="[ card__text ] [ flow ]">
-                <h1>
+            </li>
 
-                    @Html.DisplayFor(model => model.nombre)
-
-                </h1>
-                <h3>
-                    Numero de vacantes:
-                    @Html.DisplayFor(model => model.nVacantes)
-
-
-                </h3>
-                <h3>
-                    Cargo:
-                    @Html.DisplayFor(model => model.cargo)
-
-
-                </h3>
-                <h3>
-                    Descripcion:
-                    @Html.DisplayFor(model => model.descripcion)
-
-
-                </h3>
-                <h3>
-                    Requeriminetos:
-                    @Html.DisplayFor(model => model.requerimientos)
-
-
-                </h3>
-                <h3>
-                    Funciones:
-                    @Html.DisplayFor(model => model.funciones)
-
-
-                </h3>
-                <h3>
-                    Salario:
-                    @Html.DisplayFor(model => model.Salario)
-
-
-                </h3>
-                <h3>
-                    Prestaciones:
-                    @Html.DisplayFor(model => model.prestaciones)
-
-
-                </h3>
-
-                <h3>
-                    Datos empresa:
-                    @Html.DisplayFor(model => model.DatosEmpresa.nombre)
-
-
-                </h3>
-                <h3>
-                    Categoria:
-                    @Html.DisplayFor(model => model.Categoria.nombre)
-
-
-                </h3>
-            </div>
-        </li>
-      
-    </ul>
-</main>
+        </ul>
+    </main>
+}
 
 
 
