--- a/Dream/Dream/Views/Shared/_Layout.cshtml
+++ b/Dream/Dream/Views/Shared/_Layout.cshtml
@@ -71,6 +71,13 @@
                     <img src="~/Content/img/user.png" width="30" />
                     @Html.ActionLink("Perfil", "Details", "DatosEmpresas")
                 </span>
+                <br />
+            </li>
+            <li class="has-subnav">
+                <span class="nav-text">
+                    <img src="~/Content/img/user.png" width="30" />
+                    @Html.ActionLink("Contacto", "Contact", "Home")
+                </span>
             </li>
 
         </ul>
@@ -83,6 +90,7 @@
                 </span>
             </li>
         </ul>
+
 
     </nav>
 
