--- a/Dream/Dream/Views/Shared/_LayoutEmpleado.cshtml
+++ b/Dream/Dream/Views/Shared/_LayoutEmpleado.cshtml
@@ -45,12 +45,12 @@
                 <br />
             </li>
             @*<li class="has-subnav">
-                <span class="nav-text">
-                    <img src="~/Content/img/oferta.png" width="30" />
-                    @Html.ActionLink("Crear Oferta", "Create", "OfertaEmpleos")
-                </span>
-                <br />
-            </li>*@
+            <span class="nav-text">
+                <img src="~/Content/img/oferta.png" width="30" />
+                @Html.ActionLink("Crear Oferta", "Create", "OfertaEmpleos")
+            </span>
+            <br />
+        </li>*@
             <li class="has-subnav">
                 <span class="nav-text">
                     <img src="~/Content/img/oferta1.png" width="30" />
@@ -62,6 +62,13 @@
                 <span class="nav-text">
                     <img src="~/Content/img/user.png" width="30" />
                     @Html.ActionLink("Perfil", "DetailsEmpleado", "Curriculu")
+                </span>
+                <br />
+            </li>
+            <li class="has-subnav">
+                <span class="nav-text">
+                    <img src="~/Content/img/user.png" width="30" />
+                    @Html.ActionLink("Contacto", "Contact", "Home")
                 </span>
             </li>
 
