--- a/Dream/Dream/Content/Contacto.css
+++ b/Dream/Dream/Content/Contacto.css
@@ -1,20 +1,16 @@
-﻿body {
-    color: #797979;
-    background: #f1f2f7;
-    font-family: 'Open Sans', sans-serif;
-    padding: 0px !important;
-    margin: 0px !important;
-    font-size: 13px;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
+﻿
+.panel-body {
+    background: #d4ebff;
+    border-radius: 10px;
+    cursor: default;
 }
-
+    
 .profile-nav, .profile-info {
     margin-top: 30px;
 }
 
     .profile-nav .user-heading {
-        background: linear-gradient(50deg,#24638d,#a68fff);
+        background: linear-gradient(50deg,#24638d,#3542ac);
         color: #f1f2f7;
         border-radius: 4px 4px 0 0;
         -webkit-border-radius: 4px 4px 0 0;
@@ -55,12 +51,15 @@
             box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
             cursor: default;
             transition: all 400ms ease;
+            border-radius:8px;
+            border-top: 1px solid #369;
+            border-bottom: 3px double #369;
         }
 
             .profile-nav .user-heading.round:hover {
                 box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
                 transform: translateY(-3%);
-                transform: scale3d(1.1)
+                transform: scale3d(1.1);
             }
 
     .profile-nav ul {
@@ -99,17 +98,30 @@
                 color: #bcb3aa;
             }
 
-    .profile-info .panel-footer {
-        background-color: #f8f7f5;
-        border-top: 1px solid #e7ebee;
+    .profile-info .panel {
+        background: #d4ebff;
+        border-radius: 10px;
+        transition: all 400ms ease;
+        cursor: default;
+    }
+    .profile-info .panel:hover {
+        box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+        transform: translateY(-3%);
+        transform: scale3d(1.1);
     }
 
-        .profile-info .panel-footer ul li a {
-            color: #7a7a7a;
+        .profile-info .panel h3 {
+            color: #12607e;
+            
+        }
+        .profile-info .panel h4 {
+            color: rgb(1, 1, 12);
+            text-align:center;
         }
 
+
 .bio-graph-heading {
-    background: linear-gradient(50deg,#24638d,#a68fff);
+    background: linear-gradient(50deg,#24638d,#3542ac);
     color: #fff;
     text-align: center;
     font-style: italic;
@@ -120,8 +132,8 @@
     font-weight: 300;
 }
 
-.bio-graph-info {
-    color: #89817e;
+.bio-graph-info h1{
+    color: #12607e;
 }
 
     .bio-graph-info h1 {
@@ -135,6 +147,8 @@
     float: left;
     margin-bottom: 10px;
     padding: 0 15px;
+    text-align: center;
+    color: rgb(1, 1, 12);
 }
 
     .bio-row p span {
@@ -152,35 +166,28 @@
 
 .bio-desk {
     width: 60%;
+    
 }
+
 
     .bio-desk h4 {
         font-size: 15px;
         font-weight: 400;
     }
 
-        .bio-desk h4.terques {
-            color: #4CC5CD;
-        }
+       
 
         .bio-desk h4.red {
             color: #12607e;
         }
-
-        .bio-desk h4.green {
-            color: #97be4b;
-        }
-
-        .bio-desk h4.purple {
-            color: #caa3da;
-        }
+    .bio-desk p {
+        color: rgb(1, 1, 12);
+    }
+        
 
 .file-pos {
     margin: 6px 0 10px 0;
 }
 
-.profile-activity h5 {
-    font-weight: 300;
-    margin-top: 0;
-    color: #c3c3c3;
-}
+
+
