--- a/Dream/Dream/Views/OfertaEmpleos/Index2.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Index2.cshtml
@@ -44,59 +44,51 @@
 </section>
 
 <div class="btn-volver">
+    @Html.ActionLink("Crear", "Create")
 </div>
 <div class="container">
     <div class="row">
         @foreach (var item in Model)
         {
-            <div class="col-lg-4" id="pricing">
-                <div class="panel-default border border-secondary" style="backdrop-filter: blur(1rem) margin-top: 20px; border-radius: 20px; ">
+            <div class="col-lg-31 col-md-4 col-sm-6" id="pricing">
+                <div class="panel-default border border-secondary" style="backdrop-filter: blur(1rem); margin-top: 20px; border-radius: 20px; max-width: 300px;">
                     <div class="pricing-box mt-4">
                         <img src="https://cdn.milenio.com/uploads/media/2021/01/01/empleo-foto-shutterstock.jpg" height="70" class="mt-3" alt="">
                         <h4 class="f-20">@Html.DisplayFor(modelItem => item.nombre)</h4>
 
-                        <div class="mt-4 pt-2" ;>
+                        <div class="mt-4 pt-2">
                             <p>
-                                Empresa : @Html.DisplayFor(modelItem => item.DatosEmpresa.nombre)
+                                Empresa: @Html.DisplayFor(modelItem => item.DatosEmpresa.nombre)
+                            </p>
+                            <p class="mb-2">
+                                Numero de vacantes: @Html.DisplayFor(modelItem => item.nVacantes)
+                            </p>
+                            <p class="mb-2">
+                                Requisitos: @Html.DisplayFor(modelItem => item.requerimientos)
+                            </p>
+                            <p class="mb-2">
+                                categoria:   @Html.DisplayFor(modelItem => item.Categoria.nombre)
+                            </p>
 
-                            </p>
-                            <p class="mb-2">
-                                Numero de vacantes :  @Html.DisplayFor(modelItem => item.nVacantes)
-                            </p>
-                            <p class="mb-2">
-                                Requisitos :@Html.DisplayFor(modelItem => item.requerimientos)
-                            </p>
+
                             <p class="mb-2">
                                 <div class="btn-detalle" style="margin: 10px 33px;">
-                                    @Html.ActionLink("Detalles", "Details2", new { id = item.idOfertaEmpleo })
+                                    @Html.ActionLink("Detalles", "Details", new { id = item.idOfertaEmpleo })
                                 </div>
                                 @*<div class="btn-detalle" style="margin: 5px 2px;">
-                    @Html.ActionLink("Actualizar", "Edit", new { id = item.idOfertaEmpleo })
-                </div>
-                <div class="btn-detalle" style="margin: 5px 101px;">
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idOfertaEmpleo })
-                </div>*@
+                                        @Html.ActionLink("Actualizar", "Edit", new { id = item.idOfertaEmpleo })
+                                    </div>
+                                    <div class="btn-detalle" style="margin: 5px 101px;">
+                                        @Html.ActionLink("Eliminar", "Delete", new { id = item.idOfertaEmpleo })
+                                    </div>*@
                             </p>
                         </div>
-
-
-
                     </div>
-
-
-
-
-
-
-
-
                 </div>
             </div>
         }
     </div>
-
 </div>
-
 
 
 
