--- a/Dream/Dream/Views/OfertaEmpleos/TodasLasOfertas.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/TodasLasOfertas.cshtml
@@ -67,15 +67,18 @@
                                 Requisitos: @Html.DisplayFor(modelItem => item.requerimientos)
                             </p>
                             <p class="mb-2">
+                                categoria:   @Html.DisplayFor(modelItem => item.Categoria.nombre)
+                            </p>
+                            <p class="mb-2">
                                 <div class="btn-detalle" style="margin: 10px 33px;">
                                     @Html.ActionLink("Detalles", "Details", new { id = item.idOfertaEmpleo })
                                 </div>
                                 @*<div class="btn-detalle" style="margin: 5px 2px;">
-                                        @Html.ActionLink("Actualizar", "Edit", new { id = item.idOfertaEmpleo })
-                                    </div>
-                                    <div class="btn-detalle" style="margin: 5px 101px;">
-                                        @Html.ActionLink("Eliminar", "Delete", new { id = item.idOfertaEmpleo })
-                                    </div>*@
+                @Html.ActionLink("Actualizar", "Edit", new { id = item.idOfertaEmpleo })
+            </div>
+            <div class="btn-detalle" style="margin: 5px 101px;">
+                @Html.ActionLink("Eliminar", "Delete", new { id = item.idOfertaEmpleo })
+            </div>*@
                             </p>
                         </div>
                     </div>
