--- a/Dream/Dream/Views/HomeEmpleado/Index.cshtml
+++ b/Dream/Dream/Views/HomeEmpleado/Index.cshtml
@@ -62,9 +62,11 @@
                         <i class="icon-tools"></i>
                     </div>
                     <div class="service-desc">
-                        <h4>Contant Marketing</h4>
-                        <h5>Market Plan</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                        <h4>Misión:</h4>
+                        <h5></h5>
+                        <p>
+                            Nuestra misión es conectar de manera eficiente y efectiva a empresas y aplicantes a través de nuestra plataforma en línea, proporcionando un espacio donde los aplicantes puedan presentar sus currículos de manera sencilla, y donde las empresas puedan crear y publicar ofertas de empleo.
+                        </p>
                     </div>
 
                 </div>
@@ -75,9 +77,11 @@
 
                     </div>
                     <div class="service-desc">
-                        <h4>Saving Investments</h4>
-                        <h5>Finance Plan</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                        <h4>Visión:</h4>
+                        <h5></h5>
+                        <p>
+                            Nuestra visión es convertirnos en la principal plataforma en línea para la búsqueda y contratación de talento, reconocida por su facilidad de uso, calidad de los perfiles de aplicantes y la diversidad de oportunidades laborales ofrecidas por las empresas. Buscamos ser un referente en la industria.
+                        </p>
                     </div>
 
                 </div>
@@ -88,9 +92,17 @@
                         <i class="icon-hotairballoon"></i>
                     </div>
                     <div class="service-desc">
-                        <h4>Detail Report</h4>
-                        <h5>Detail Plan</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                        <h4>Valores:</h4>
+                        <h5></h5>
+                        <p>- Integridad
+                        <p />
+                        <p>- Responsabilidad
+                        <p />
+                        <p>- Respeto
+                        <p />
+                        <p>
+                            - Calidad
+                        </p>
                     </div>
                 </div>
             </div>
